@@ -6,9 +6,7 @@
   <configswitch name="driver" desc="What storage driver should we use?">sql
    <case name="sql" desc="SQL">
     <configsection name="params">
-     <configsql switchname="driverconfig">
-      <configstring name="table" desc="Database table">nag_tasks</configstring>
-     </configsql>
+     <configsql switchname="driverconfig"/>
     </configsection>
    </case>
    <case name="kolab" desc="IMAP/Kolab" />
